# AgentGuard

./: .gitattributes  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  agentguard-60s-commercial.html  agentguard-60s-vo-script.md  go.mod  go.sum  project.md
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: adapter-request.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  release-sbom.yml
cmd/agentguard/: audit_setup.go  audit_setup_test.go  check_cmd.go  check_cmd_test.go  integration_cli_parity_test.go  main.go  update_check.go
cmd/agentguard-llm-proxy/: main.go
cmd/agentguard-mcp-gateway/: main.go
configs/: default.yaml
configs/examples/: research-agent.yaml  trading-bot.yaml
docs/: ADAPTERS.md  API.md  APPROVAL_WORKFLOW.md  CLI.md  COMPATIBILITY.md  CONFIG.md  CONTRIBUTING.md  DASHBOARD.md  DEPLOYMENT.md  DEPRECATIONS.md  FAQ.md  FILE_FORMATS.md  LLM_API_PROXY.md  MCP_GATEWAY.md  MIGRATION.md  OBSERVABILITY.md  OPERATIONS.md  POLICY_REFERENCE.md  PROXY_ARCHITECTURE.md  QUICKSTART_LLM_PROXY.md  QUICKSTART_MCP.md  SDK_PYTHON.md  SETUP.md  SLO.md  TROUBLESHOOTING.md  TUNING.md  WIRE_PROTOCOL.md  v0.6-ARCHITECTURE-PLAN.md  v1.0-multinode-PLAN.md
docs/archive/: project.md  v0.6-ARCHITECTURE-PLAN.md
docs/audit/: 2026-06-INTERNAL-AUDIT.md  STRUCTURAL-REVIEW-2026-06.md
docs/releases/: v0.4.1.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.7.0.md  v0.9.0.md  v1.0.0.md
examples/: README.md  anthropic-sdk-config.md  anthropic-sdk-config.py  claude-desktop-config.json  claude-desktop-config.md  cline-config.json  cline-config.md  continue-config.json  continue-config.md  crewai-agent-config.md  crewai-agent-config.py  cursor-config.json  cursor-config.md  examples_test.go  langchain-agent-config.md  langchain-agent-config.py  openai-sdk-config.md  openai-sdk-config.py  quickstart.py  zed-config.json  zed-config.md
pkg/audit/: buffered.go  buffered_panic_test.go  buffered_test.go  checkpoint.go  checkpoint_test.go  entry_test.go  logger.go  logger_bench_test.go  logger_extended_test.go  logger_test.go  rotation.go  rotation_e2e_test.go  rotation_test.go  sqlite_logger.go  tenant_test.go
pkg/depaudit/: advisories.json  advisories.md  depaudit.go  depaudit_test.go  osv.go
pkg/deprecation/: deprecation.go  deprecation_test.go
pkg/llmproxy/: anthropic_parser.go  anthropic_parser_test.go  argcheck.go  at_anthropic_property_test.go  at_b2_e2e_test.go  at_byte_identity_e2e_test.go  at_captured_fixtures_test.go  at_concurrency_stress_test.go  at_integration_test.go  at_openai_property_test.go  at_refusal_correctness_test.go  at_sse_realism_test.go  config.go  config_test.go  forward.go  forward_test.go  fuzz_streaming_test.go  gate.go  gate_forced_audit_test.go  gate_malformed_test.go  gate_test.go  hardening_test.go  openai_parser.go  openai_parser_test.go  protocol.go  protocol_test.go  refusal.go  refusal_test.go  scope_map.go  scope_map_test.go  security_audit_test.go  server.go  server_test.go  streaming.go  streaming_f1_fidelity_test.go  streaming_f1_test.go  streaming_test.go
pkg/mcpgw/: at_approval_e2e_test.go  at_capability_property_test.go  at_e2e_helpers_test.go  at_filesystem_e2e_test.go  at_protocol_negotiation_test.go  audit.go  (+12 more)
plugins/python/: README.md  pyproject.toml  setup.py
plugins/python/agentguard/: __init__.py  core.py  decorators.py
plugins/python/agentguard/adapters/: _common.py  browseruse.py  crewai.py  langchain.py  mcp.py
plugins/python/tests/: conftest.py  test_action_parity.py  test_adapters.py  test_adapters_extended.py  test_browseruse.py  test_crewai.py  test_decorator.py  test_end_to_end_real_server.py  test_guard.py  test_langchain.py  test_mcp.py  test_mcp_fuzz.py  test_mcp_gateway.py  test_polling_jitter.py  test_redactor_property.py  test_sdk_integration.py  test_sdk_polish.py  test_tenant_routing.py  test_wire_format.py
plugins/python/tests/integration/: __init__.py  _mcp_stub_server.py  conftest.py  test_at_llm_proxy_e2e.py  test_at_mcp_gateway.py  test_at_real_browseruse.py  test_at_real_crewai.py  test_at_real_langchain.py  test_real_browseruse.py  test_real_crewai.py  test_real_langchain.py
scripts/: bump-version.sh  test-all.sh
(+129 files in other folders)
