[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguardproxy"
version = "0.4.1"
description = "Python SDK for AgentGuard — the firewall for AI agents"
readme = "README.md"
license = "Apache-2.0"
# requires-python: 3.9 floor.
#
# v0.5 drops 3.8 (R1 E1). 3.8 reached upstream end-of-life in October 2024 and
# the pinned framework extras (langchain >=0.3, crewai >=0.80, mcp >=0.9) all
# require 3.9+ themselves; keeping 3.8 in the trove only invited a broken
# `pip install agentguardproxy[langchain]` resolution. The CI matrix exercises
# 3.9, 3.10, 3.11, 3.12 on every push.
requires-python = ">=3.9"
authors = [
    { name = "Cauã Ferraz", email = "cauaferrazp@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
keywords = ["ai", "agents", "firewall", "policy", "guardrails", "safety"]

[project.urls]
Homepage = "https://github.com/Caua-ferraz/AgentGuard"
Repository = "https://github.com/Caua-ferraz/AgentGuard"
Documentation = "https://github.com/Caua-ferraz/AgentGuard/blob/master/docs/SETUP.md"
Issues = "https://github.com/Caua-ferraz/AgentGuard/issues"

[project.optional-dependencies]
# Framework extras carry upper bounds (v0.5 R5 P1/P2/P3/P4/P5, R1 F1).
# v0.4.x's "0.1+" floor allowed silent rot when frameworks renamed methods
# or added new bypass paths. The CI integration-tests job runs against the
# pinned major every week; the upper bound is bumped only after a new major
# is verified end-to-end. Decision recorded in .audit/v05_decisions.md
# under "Framework extras version pins".
#
# Floors reflect the API surface that AgentGuard's adapters were hardened
# against (A11/A12/A13). Ceilings are the next major boundary so a future
# breaking release does not silently install on top of v0.5.
#
# CURRENT UPSTREAM MAJORS (verified 2026-05-05 via `pip index versions`):
#   langchain        1.2.x     (was 0.3 when A11 landed; bumped 1.0 → 1.2)
#   langchain-core   1.3.x
#   crewai           1.14.x    (was 0.80 when A12 landed; bumped 1.0 → 1.14)
#   browser-use      0.12.x    (was 0.4 when A13 landed; pre-1.0)
#   mcp              1.27.x
#
# The floors below cover the hardened surface AND the current major so a
# fresh `pip install` resolves successfully. When a framework cuts the next
# major, the integration-tests CI job exercises the new surface; the
# operator workflow is to bump the upper bound once green.
langchain = [
    "langchain-core>=0.3,<2.0",
    "langchain>=0.3,<2.0",
]
crewai = ["crewai>=0.80,<2.0"]
browser-use = [
    "browser-use>=0.4,<1.0",
    "playwright>=1.40",
]
# MCP SDK is on the 1.x line. Earlier 0.9.1 release predates the stable
# Python SDK shape; the floor includes both for compatibility.
mcp = ["mcp>=0.9,<2.0"]
# Convenience: install every adapter extra in one go (pip install ".[all]").
# Self-reference picks up the version-pinned extras above.
all = ["agentguardproxy[langchain,crewai,browser-use,mcp]"]
# Test deps. responses + pytest-asyncio added so integration tests can use
# them without each extra group dragging them in.
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "responses>=0.23",
]
# integration: install everything for the integration-tests CI job in
# one shot. Mirrors `all` but exists separately so a downstream user
# who wants the heavyweight test deps does not have to remember every
# extra. Paired with `[dev]` in the CI workflow.
integration = ["agentguardproxy[langchain,crewai,browser-use,mcp]"]

[tool.setuptools.packages.find]
include = ["agentguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: real-framework integration test (deselect with '-m \"not integration\"')",
    "playwright: requires Playwright browser binaries (run `playwright install chromium` first)",
]
